--- a/Views/layout.pug
+++ b/Views/layout.pug
@@ -53,13 +53,11 @@ html(lang="es")
       }
 
       footer {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
         background-color: #762051;
         color: #fff;
         text-align: center;
         padding: 15px;
+        margin-top: auto;
       }
 
       .btn-nuevo {
@@ -96,6 +94,9 @@ html(lang="es")
       | Todos los derechos reservados © 2025 Huellitas Felices
 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js")
+
+
+
 
 
 
