--- a/test2/huellitas_felices-main/Views/servicios/servicios.pug
+++ b/test2/huellitas_felices-main/Views/servicios/servicios.pug
@@ -6,7 +6,7 @@ block content
     .row
       .col-12
         .card.shadow-sm
-          .card-header.bg-primary.text-white.d-flex.justify-content-between.align-items-center
+          .card-header(style="background-color: #762051;").text-white.d-flex.justify-content-between.align-items-center
             .d-flex.align-items-center
               h4.mb-0.me-2
                 i.bi.bi-heart-pulse-fill.me-2
