Módulo Productos - Modificaciones varias

--- a/Views/dashboard.pug
+++ b/Views/dashboard.pug
@@ -114,7 +114,7 @@ html(lang="es")
             img(src="/images/icono-mascotas.png" alt="Mascotas" style="width:90px; margin-bottom:0px;")
             | MASCOTAS
         .col-md-4.d-flex.justify-content-center
-          a.dashboard-btn(href="/productos/dashboard")
+          a.dashboard-btn(href="/productos")
             img(src="/images/icono-productos.png" alt="Productos" style="width:90px; margin-bottom:0px;")
             | PRODUCTOS
 
